# dip

./: .gitignore  README.md  justfile  pyproject.toml
src/: predict.py
src/dip_ml/: fast_api.py
tests/: test_fast_api_middleware.py  test_predict.py
